--- a/views/planner/last.handlebars
+++ b/views/planner/last.handlebars
@@ -1,3 +1,10 @@
+       <a href="/home" class="brand-logo"><h3 class="header">Our Lady of the Angels Music Planner</h3></a>
+  
+  <div id="buttons">
+    <a href="/home"><button class="btn" id="home">Home</button></a>
+   
+<a href="/library" target="_blank"><button class="btn" id="">Library</button></a>
+  </div>
       <h4>{{ this.season }} {{ this.litdate }}, Year {{ this.cycle }}</h4>
       <h5>{{ this.caldate }}</h5>
       <ul class="collapsible">
