--- a/views/planner/library_edit.handlebars
+++ b/views/planner/library_edit.handlebars
@@ -1,3 +1,5 @@
+   <a href="/home" class="brand-logo"><h3 class="header">Our Lady of the Angels Music Planner</h3></a>
+ 
 <h4>{{ title }}</h4>
 <h5>by {{ composer }}</h5>
 <div class="row">
@@ -32,8 +34,20 @@
               <label for="copyright">Copyright</label>
           </div>
       </div>
-        <button class="btn waves-effect waves-light" type="submit" >Update
+        <button  class="btn waves-effect waves-light"  type="submit">Update
     <i class="material-icons right">refresh</i>
   </button>
     </form>
+  </div>
+
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Library Entry Updated</h4>
+      <p>Woot! {{title}} has been updated...</p>
+      <p>You can close the browser tab.</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Okay</a>
+    </div>
   </div>
