--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
   {{!-- <link rel="stylesheet" href="style.css"> --}}
 
 </head>
-
+ <a href="/" class="brand-logo center-align"><h3 class="header">Our Lady of the Angels Music Planner</h3></a>
 <body class="container">
 
       
