--- a/views/planner/library_add.handlebars
+++ b/views/planner/library_add.handlebars
@@ -1,7 +1,5 @@
-   <a href="/home" class="brand-logo"><h3 class="header">Our Lady of the Angels Music Planner</h3></a>
- 
   <div id="buttons">
-    <a href="/home"><button class="btn" id="home">Home</button></a>
+    <a href="/"><button class="btn" id="home">Home</button></a>
    
 <a href="/reset/library" target=""><button class="btn" id="">Library</button></a>
   </div>
