--- a/views/planner/library.handlebars
+++ b/views/planner/library.handlebars
@@ -1,7 +1,5 @@
-  <a href="/home" class="brand-logo"><h3 class="header">Our Lady of the Angels Music Planner</h3></a>
-  
   <div id="buttons">
-    <a href="/home"><button class="btn" id="home">Home</button></a>
+    <a href="/"><button class="btn" id="home">Home</button></a>
    
 <a href="#"><button class="btn" id="library_reset">Library</button></a>
   </div>
@@ -11,42 +9,33 @@
     <a href="/add/library"><button class="btn" id="add_library">Add New Song</button></a>
   </div>
 
+{{!-- insert tabs headings here --}}
+
+<div class="row">
+    <div class="col s12">
+      <ul class="tabs">
+        <li class="tab col s3"><a class="active" href="#tab1">Title</a></li>
+        <li class="tab col s3"><a  href="#tab2">Composer</a></li>
+        <li class="tab col s3"><a href="#tab3">Other?</a></li>
+      </ul>
+    </div>
+
+{{!-- insert tabs contents here --}}
+<div id="tab1">
+
 <div class="">
     <div class="col s12">
       <div class="">
         <div class="input-field col s12">
           <i class="material-icons prefix">search</i>
-          <input type="text" id="autocomplete-input" class="autocomplete">
-          <label for="autocomplete-input">Search Music Library</label>
+          <input type="text" id="autocomplete-input1" class="autocomplete1">
+          <label for="autocomplete-input1">Search Music Library</label>
         </div>
       </div>
     </div>
   </div>
 
-<div class="row">
- <form action="#">
-    
-      <label for="query_title">
-        <input name="query" id="query_title" type="radio" checked />
-        <span>Title</span>
-      </label>
-   
-      <label for="query_composer">
-        <input name="query" id="query_composer" type="radio" />
-        <span>Composer</span>
-      </label>
-   
-      <label for="query_other">
-        <input class="" id="query_other" name="query" type="radio"  />
-        <span>Other?</span>
-      </label>
-   
-  </form>
-
-</div>
-
-
-<ul class="collapsible popout">
+<ul class="collapsible expandable">
     {{#each data}}
         {{#if render}}
     <li>
@@ -63,6 +52,48 @@
         {{/if}}
     {{/each}}
 </ul>
+
+</div> {{!-- end of tab1 --}}
+
+<div id="tab2">
+  <div class="">
+    <div class="col s12">
+      <div class="">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">search</i>
+          <input type="text" id="autocomplete-input2" class="autocomplete2">
+          <label for="autocomplete-input2">Search Music Library</label>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<ul class="collapsible expandable">
+    {{#each data}}
+        {{#if render}}
+    <li>
+      <div class="collapsible-header" data-id="{{ _id }}"><i class="material-icons">queue_music</i>{{ title }}    
+      <br /> by {{ composer }}</div>
+      <div class="collapsible-body"><span>{{ refrain }}</span>
+        {{#each verses }}
+        <p>{{ this }}</p>
+        {{/each }}
+        <p>{{ copyright }}</p>
+        <a href="/library/{{ _id}}" target="_blank" class="waves-effect waves-teal btn-flat edit" data-id="{{ _id }}">Edit</a>
+        </div>
+    </li>
+        {{/if}}
+    {{/each}}
+</ul>
+
+</div> {{!-- end of tab2 --}}
+<div id="tab3">
+  this is tab3.
+</div> {{!-- this is the end of tab3 --}}
+
+</div> {{!-- end of all tabs --}}
+
+
 
 <div class="row">
     <div class="col s12 m9 l10">
